--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ log.json
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/bin/
